--- a/app/src/main/res/layout/fragment_assesment_frgment.xml
+++ b/app/src/main/res/layout/fragment_assesment_frgment.xml
@@ -5,10 +5,18 @@
     android:layout_height="match_parent"
     tools:context=".frgments.AssesmentFrgment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        tools:context="com.lnct.bhopal.ac.in.idealab.quiz.AssesmentActivity">
 
+        <LinearLayout
+            android:id="@+id/desc"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <include
+                layout="@layout/layout_desc_question"/>
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
