--- a/app/src/main/res/layout/fragment_quiz_welcome.xml
+++ b/app/src/main/res/layout/fragment_quiz_welcome.xml
@@ -11,56 +11,62 @@
 
 <!--    D67F6B-->
 
-    <LinearLayout
-        android:background="@drawable/quiz_background"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center">
 
 
         <androidx.cardview.widget.CardView
-            app:cardElevation="8dp"
+            android:id="@+id/cardView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="20dp"
-            android:layout_marginTop="30sp"
+            android:layout_height="0dp"
+            android:layout_marginTop="5sp"
             android:layout_marginHorizontal="15sp"
             android:backgroundTint="@color/bgColor"
-            >
+            app:cardCornerRadius="20dp"
+            app:cardElevation="5dp"
+            android:layout_marginBottom="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/btnStartQuiz"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="15dp">
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:layout_margin="7dp"
                 android:gravity="center"
-               android:layout_margin="7dp">
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
                     android:gravity="center"
+                    android:orientation="vertical"
                     android:padding="10dp">
+
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/quiz"/>
+                        android:src="@drawable/quiz" />
+
                     <TextView
-                        android:layout_marginTop="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="5dp"
                         android:text="Assessment"
-                        android:textSize="30sp"
-                        android:textStyle="bold"
                         android:textColor="@color/black"
-                        android:layout_gravity="center"/>
+                        android:textSize="30sp"
+                        android:textStyle="bold" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:text="Play the quiz to register yourself in the event"/>
+                        android:text="Play the quiz to register yourself in the event" />
 
                 </LinearLayout>
 
@@ -72,83 +78,88 @@
                     android:text="Rules : "
                     android:textColor="@color/black"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    />
+                    android:textStyle="bold" />
+
                 <TextView
-                    android:layout_marginTop="2dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="5sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="left"
-                    android:textSize="13sp"
+                    android:layout_marginTop="2dp"
                     android:layout_marginBottom="10sp"
-                    android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."/>
-
-
-
-
-
-
+                    android:gravity="left"
+                    android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
+                    android:textSize="13sp" />
 
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
 
-        <androidx.cardview.widget.CardView
-            app:cardElevation="8dp"
-            android:layout_width="match_parent"
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnStartQuiz"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="20dp"
-            android:layout_marginHorizontal="15sp"
-            android:layout_marginBottom="30sp"
-            android:layout_marginTop="30sp"
-            android:backgroundTint="@color/bgColor"
-            >
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:padding="10dp">
-                <TextView
-                    android:id="@+id/tvEventName"
-                    android:textColor="@color/black"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Event Name"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:layout_gravity="center"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="The marks scored in the following quiz will act as a selection criteria for the event."/>
+            android:layout_gravity="center"
+            android:background="@drawable/round_quiz_btn"
+            android:paddingStart="30dp"
+            android:paddingEnd="30dp"
+            android:text="Getting thingh ready..."
+            android:textColor="#FFFFFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btnStartQuiz"
-                    android:layout_width="wrap_content"
-                    android:layout_height="45dp"
-                    android:layout_marginBottom="20dp"
-                    android:paddingStart="30dp"
-                    android:paddingEnd="30dp"
-                    android:layout_marginTop="20dp"
-                    android:background="@drawable/round_quiz_btn"
-                    android:layout_gravity="center"
-                    android:text="Start test"
-                    android:textColor="#FFFFFF"
+<!--        <androidx.cardview.widget.CardView-->
+<!--            app:cardElevation="8dp"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:cardCornerRadius="20dp"-->
+<!--            android:layout_marginHorizontal="15sp"-->
+<!--            android:layout_marginBottom="30sp"-->
+<!--            android:layout_marginTop="30sp"-->
+<!--            android:backgroundTint="@color/bgColor"-->
+<!--            >-->
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="vertical"-->
+<!--                android:gravity="center"-->
+<!--                android:padding="10dp">-->
+<!--                <TextView-->
+<!--                    android:id="@+id/tvEventName"-->
+<!--                    android:textColor="@color/black"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="Event Name"-->
+<!--                    android:textSize="20sp"-->
+<!--                    android:textStyle="bold"-->
+<!--                    android:layout_gravity="center"/>-->
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:gravity="center"-->
+<!--                    android:text="The marks scored in the following quiz will act as a selection criteria for the event."/>-->
+
+<!--&lt;!&ndash;                <androidx.appcompat.widget.AppCompatButton&ndash;&gt;-->
+<!--&lt;!&ndash;                    android:id="@+id/btnStartQuiz"&ndash;&gt;-->
+<!--&lt;!&ndash;                    android:layout_width="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                    android:layout_height="45dp"&ndash;&gt;-->
+<!--&lt;!&ndash;                    android:layout_marginBottom="20dp"&ndash;&gt;-->
+<!--&lt;!&ndash;                    android:paddingStart="30dp"&ndash;&gt;-->
+<!--&lt;!&ndash;                    android:paddingEnd="30dp"&ndash;&gt;-->
+<!--&lt;!&ndash;                    android:layout_marginTop="20dp"&ndash;&gt;-->
+<!--&lt;!&ndash;                    android:background="@drawable/round_quiz_btn"&ndash;&gt;-->
+<!--&lt;!&ndash;                    android:layout_gravity="center"&ndash;&gt;-->
+<!--&lt;!&ndash;                    android:text="Start test"&ndash;&gt;-->
+<!--&lt;!&ndash;                    android:textColor="#FFFFFF"/>&ndash;&gt;-->
+
+<!--            </LinearLayout>-->
+
+<!--        </androidx.cardview.widget.CardView>-->
 
 
-                    />
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
 
 
 
-
-
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
