--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -35,10 +35,36 @@
             android:layout_gravity="bottom">
 
             <LinearLayout
+                android:id="@+id/user_logout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="35sp"
+                    android:layout_height="35sp"
+                    android:src="@drawable/logout"
+                    android:layout_marginStart="30sp"
+                    android:layout_marginHorizontal="10sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:text="Logout"/>
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center"
+                android:layout_marginTop="5sp"
                 android:layout_gravity="bottom">
 
                 <ImageView
@@ -55,12 +81,12 @@
                     android:src="@drawable/instagram"
                     android:layout_marginHorizontal="10sp"/>
 
-                <ImageView
-                    android:id="@+id/user_logout"
-                    android:layout_width="35sp"
-                    android:layout_height="35sp"
-                    android:src="@drawable/logout"
-                    android:layout_marginHorizontal="10sp"/>
+<!--                <ImageView-->
+<!--                    android:id="@+id/user_logout"-->
+<!--                    android:layout_width="35sp"-->
+<!--                    android:layout_height="35sp"-->
+<!--                    android:src="@drawable/logout"-->
+<!--                    android:layout_marginHorizontal="10sp"/>-->
 
             </LinearLayout>
 
@@ -68,8 +94,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="20sp"
                 android:text="Copyright © 2022 IDEALAB | LNCT"
-                android:textAlignment="center"
-                android:layout_marginTop="10sp"/>
+                android:textAlignment="center"/>
 
         </LinearLayout>
 
