--- a/app/src/main/res/layout/event_recycler_layout.xml
+++ b/app/src/main/res/layout/event_recycler_layout.xml
@@ -16,8 +16,7 @@
         app:layout_constraintDimensionRatio="4:2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:strokeWidth="1sp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -55,7 +54,7 @@
                     android:maxLines="3"
                     android:text="No events"
                     android:textColor="@color/blue"
-                    android:textSize="20sp"
+                    android:textSize="22sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -63,10 +62,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="10sp"
-                    android:text="..."
+                    android:text="Start date: 2023-12-21"
                     android:textColor="@color/blue"
-                    android:textSize="15sp"
-                    android:textStyle="italic" />
+                    android:textSize="13sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
@@ -102,7 +101,7 @@
 
     <com.google.android.material.divider.MaterialDivider
         android:id="@+id/divider"
-        android:layout_width="50sp"
+        android:layout_width="1sp"
         android:layout_height="1sp"
         android:background="@color/dark_blue"
         android:orientation="horizontal"
