--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -66,10 +66,9 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/gray_curved_background"
-                    android:text="Register for events"
+                    android:text="Upcoming events"
                     android:layout_margin="10sp"
-                    android:textColor="@color/blue"
+                    android:textColor="@color/darkGray"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -89,8 +88,7 @@
                     android:text="Events"
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    android:background="@drawable/gray_curved_background"
-                    android:textColor="@color/blue"/>
+                    android:textColor="@color/darkGray"/>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/past_event_view"
