--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -67,7 +67,8 @@
                 android:id="@+id/cardView2"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_margin="10sp"
+                android:layout_marginHorizontal="10sp"
+                android:layout_marginTop="25sp"
                 app:layout_constraintDimensionRatio="16:9"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -98,9 +99,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/gray_curved_background"
                     android:text="Upcoming Events"
-                    android:textColor="@color/logo_blue"
+                    android:textColor="@color/darkGray"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -136,25 +136,24 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10sp"
                 android:orientation="vertical"
-                android:layout_marginTop="30sp"
+                android:layout_marginTop="35sp"
                 app:layout_constraintTop_toBottomOf="@+id/cardView2">
 
                 <TextView
                     android:id="@+id/temp2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/gray_curved_background"
                     android:text="Highlights"
-                    android:textColor="@color/logo_blue"
+                    android:textColor="@color/darkGray"
                     android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"/>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/gallery_recycler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_marginTop="10sp"
+                    android:layout_marginTop="15sp"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     tools:itemCount="5"
                     tools:listitem="@layout/home_fragment_gallery" />
@@ -163,14 +162,14 @@
                     android:id="@+id/pos_tv_gallery"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:scaleX="1.5"
-                    android:scaleY="2"
-                    android:text="•••"
+                    android:text="◦◦◦"
                     android:textAlignment="center"
-                    android:textSize="12sp"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
+
+<!--            texts for above tv  •••●Ổ○◦   -->
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
