--- a/app/src/main/res/layout/upcoming_events_recycler.xml
+++ b/app/src/main/res/layout/upcoming_events_recycler.xml
@@ -30,7 +30,7 @@
                 android:layout_margin="2sp"
                 android:src="@drawable/idea_lab_sq_logo"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintDimensionRatio="9:16"
+                app:layout_constraintDimensionRatio="9:14"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -65,10 +65,10 @@
                     android:id="@+id/event_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="------"
-                    android:textColor="@color/light_blue"
-                    android:textSize="15sp"
-                    android:textStyle="italic" />
+                    android:text=""
+                    android:textColor="@color/blue"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
